[project]
name = "md2coreui"
version = "1.0.0"
description = "Markdown to CoreUI-styled HTML converter (mistune + markdown)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[project.optional-dependencies]
mistune = ["mistune>=0.11"]
markdown = ["markdown>=3.4"]
all = ["mistune>=0.11", "markdown>=3.4"]

[project.urls]
Repository = "https://github.com/Yuego/md2coreui"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
